@@ -3,6 +3,7 @@ version = "0.4.1"
 # [GENERAL]
 n_workers = 1 # number of games played in parallel; note that the actual number of used cores might be higher depending on how the games are implemented
 n_players = 2 # number of players in a game, you only need to change that if your game is not 1v1
+selfplay_check = false # if true, when you add a bot, it's going to play a game against itself to check if it's working properly
 
 # [MATCHMAKING]
 mm_min_matches = 200 
