@@ -3,6 +3,7 @@
 * db verify: new command for checking if .db is correct
 * show/info: add color support for odd/even rows (configurable via cfg)
 * show: --include/--exclude recalculates ranking after include/excluding all bots matching specified regexes
+* bot add: when you submit a bot, it will run a single game against itself to check for crashes before adding it to db (configurable via cfg)
 * run: only a single run is allowed
 * progress bar when performing ranking recalculation (you can turn it off via cfg)
 * [fix] any ranking recalculation (usually removing a bot) would reset active status of all remaining bots 
